--- a/app/views/course/about-this-course.html
+++ b/app/views/course/about-this-course.html
@@ -55,7 +55,7 @@
 
         <details {% if data[course.programmeCode + '-outcome'] == 'PGDE with QTS' %}open{% endif %}>
           <summary><span class="summary">More options</span></summary>
-          <div class="panel panel-border-narrow">
+          <div class="govuk-inset-text">
             {% set fields = [
                 {
                   name: 'PGDE with QTS',
