--- a/app/views/history/contact-details/index.html
+++ b/app/views/history/contact-details/index.html
@@ -13,11 +13,11 @@
 
       <p>Users told us that those UCAS contact details wouldn’t be correct.</p>
 
-      <div class="panel panel-border-wide">
+      <div class="govuk-inset-text">
         <p>“Where are the contact details pulled from? … I don’t want it to put my personal details … I don’t want it to show an address, it’ll be wrong … If you pull in the address from UCAS it’ll be wrong … It could be an admin office, not somewhere someone can visit and see us” (<a href="https://lookback.io/watch/kY9HWu5MJiJhgJ5yC?t=58m55s">Video</a>)</p>
       </div>
 
-      <div class="panel panel-border-wide">
+      <div class="govuk-inset-text">
         <p>“So I need to put in the contact details… Where am I putting in the contact details? … The information I put on UCAS isn’t necessarily who they need to ring” (<a href="https://lookback.io/watch/acQugHJ6r7QFpvkMQ?t=1h25m6.76s">Video</a>)</p>
       </div>
 
@@ -53,7 +53,7 @@
 
       <p><a href="https://design-system.service.gov.uk/patterns/telephone-numbers/">Follow design system guidance on telephone numbers</a></p>
 
-      <div class="panel panel-border-wide">
+      <div class="govuk-inset-text">
         <p>Users should be allowed to enter telephone numbers in whatever format is familiar to them. You should allow for additional spaces, hyphens, brackets and dashes, and be able to accommodate country and area codes.</p>
       </div>
 
