--- a/app/views/history/copy-content-from-another-course-live/index.html
+++ b/app/views/history/copy-content-from-another-course-live/index.html
@@ -11,7 +11,7 @@
     <div class="govuk-grid-column-two-thirds">
       <p>When we initially designed and tested the <a href="/history/copy-content-from-another-course">copy content feature</a> we expected the backend to be a bottleneck:</p>
 
-      <div class="panel panel-border-wide">
+      <div class="govuk-inset-text">
         <p>We needed an alternative to templates … without depending on backend development too heavily – which is our current bottleneck.</p>
       </div>
 
