--- a/app/views/history/copy-content-from-another-course/index.html
+++ b/app/views/history/copy-content-from-another-course/index.html
@@ -11,7 +11,7 @@
     <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-l">We tried templates</h2>
       <p>From our investigation into <a href="/history/templates">sharing content using templates</a>:</p>
-      <blockquote class="panel panel-border-wide">
+      <blockquote class="govuk-inset-text">
         <p>For many training providers there is great similarity between the courses they offer for different subjects. Users need an easy way to share information between these courses so they don't have to copy and paste content between them. Users also need to easily update all courses that share information, so that they all remain consistent, again without needing to copy and paste.</p>
 
         <p>We’ve observed in user research that without the ability to share information users are likely to use copy and paste.</p>
