--- a/app/views/history/multiple-organisations/index.html
+++ b/app/views/history/multiple-organisations/index.html
@@ -58,7 +58,7 @@
 
       <p>The design worked without any supporting copy. The separation of organisations was understood by the user.</p>
 
-      <div class="panel panel-wide-border">
+      <div class="govuk-inset-text">
         <blockquote>
           <p>“Oh lovely, that’s really good”</p>
           <p>“It’s nice that you don’t have to log in somewhere else”</p>
