--- a/app/views/history/specific-requirements/index.html
+++ b/app/views/history/specific-requirements/index.html
@@ -28,28 +28,28 @@
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <th class="bold">A* – C</th>
+            <th class="govuk-table__cell bold">A* – C</th>
             <td class="govuk-table__cell">No alert</td>
             <td class="govuk-table__cell">No alert</td>
             <td class="govuk-table__cell">No alert</td>
             <td class="govuk-table__cell">No alert</td>
           </tr>
           <tr class="govuk-table__row">
-            <th class="bold">Pending</th>
+            <th class="govuk-table__cell bold">Pending</th>
             <td class="govuk-table__cell"><span class="error-message">Alert</span></td>
             <td class="govuk-table__cell">No alert</td>
             <td class="govuk-table__cell">No alert</td>
             <td class="govuk-table__cell">No alert</td>
           </tr>
           <tr class="govuk-table__row">
-            <th class="bold">Equivalence test</th>
+            <th class="govuk-table__cell bold">Equivalence test</th>
             <td class="govuk-table__cell"><span class="error-message">Alert</span></td>
             <td class="govuk-table__cell"><span class="error-message">Alert</span></td>
             <td class="govuk-table__cell">No alert</td>
             <td class="govuk-table__cell">No alert</td>
           </tr>
           <tr class="govuk-table__row">
-            <th class="bold">D – G</th>
+            <th class="govuk-table__cell bold">D – G</th>
             <td class="govuk-table__cell"><span class="error-message">Alert</span></td>
             <td class="govuk-table__cell"><span class="error-message">Alert</span></td>
             <td class="govuk-table__cell"><span class="error-message">Alert</span></td>
@@ -62,7 +62,7 @@
 
       <p>Example course: <a href="https://find-postgraduate-teacher-training.education.gov.uk/course/17B/225K">17B/225K</a></p>
 
-      <blockquote class="panel panel-border-wide">
+      <blockquote class="govuk-inset-text">
         <p>You want the applicant to already have achieved the qualification at time of applying.</p>
       </blockquote>
 
@@ -72,7 +72,7 @@
 
       <p>Example course: <a href="https://find-postgraduate-teacher-training.education.gov.uk/course/12U/2527">12U/2527</a></p>
 
-      <blockquote class="panel panel-border-wide">
+      <blockquote class="govuk-inset-text">
         <p>You will consider applicants who expect to achieve the necessary qualifications before the training programme begins.</p>
       </blockquote>
 
@@ -82,7 +82,7 @@
 
       <p>Example course: <a href="https://find-postgraduate-teacher-training.education.gov.uk/course/1PJ/236Y">1PJ/236Y</a></p>
 
-      <blockquote class="panel panel-border-wide">
+      <blockquote class="govuk-inset-text">
         <p>You can offer applicants an equivalence test.</p>
       </blockquote>
 
@@ -94,7 +94,7 @@
 
       <p>Example course: <a href="https://find-postgraduate-teacher-training.education.gov.uk/course/B60/X341">B60/X341</a></p>
 
-      <blockquote class="panel panel-border-wide">
+      <blockquote class="govuk-inset-text">
         <p>You do not require an applicant to hold GCSE grades A-C, 4 or above, or equivalent. This code can only be used for further education or post-compulsory education courses.</p>
       </blockquote>
 
