--- a/app/views/history/the-location-problem.html
+++ b/app/views/history/the-location-problem.html
@@ -80,17 +80,17 @@
 
       <p>Locations are sometimes not defined until after the application process is complete (eg larger SCITTS):</p>
 
-      <p class="panel panel-border-narrow">
+      <p class="govuk-inset-text">
         <a href="https://www.nationalmodernlanguages.com/our-partner-schools/">National Modern Languages SCITT</a>: “Which hub will I be based in? Our partnerships are developing constantly, so we can offer trainees a range of geographical locations to suit their lives. We will discuss where a trainee wants to be located as part of the application process. If trainees already have existing relationships with schools, we are always happy to discuss developing a new partnership.”
       </p>
 
-      <p class="panel panel-border-narrow">
+      <p class="govuk-inset-text">
         <a href="http://www.nmapscitt.org.uk/partnership-structure/">National Mathematics & Physics SCITT</a>: “Hubs may be led by either State or Independent sector schools and partner schools offering training places will also come from both sectors. … When you apply via UCAS you will need to indicate which area Hub you wish to train under. All interviews will take place at the Hub lead school to which you have applied, at which time, options for main and second training placements will be discussed and you will be able to state your preferences.”
       </p>
 
       <p>Unis make students aware that they will have to be prepared to travel up to 90 minutes each way, but will attempt to make allawance where possible:</p>
 
-      <div class="panel panel-border-narrow">
+      <div class="govuk-inset-text">
         <p>“The University of Nottingham works with over 100 partnership schools. School Direct students will already have their main placement school. For PGCE, matching students to schools for the first placement is done before you begin the course. All students will have a second school placement and a number of factors will be considered to ensure that you have a variety of experiences whilst on the PGCE course. It could be that if you had a more rural school for one of your placements you will be placed in an urban school for the other. If you have said that you have caring responsibilities this will be taken into consideration in terms of the level of responsibility you have.</p>
 
         <p>You should expect that you will have to travel to your placement schools and that your schools may not be local to where you live.</p>
