--- a/app/views/history/course-not-running-oct-15/index.html
+++ b/app/views/history/course-not-running-oct-15/index.html
@@ -14,7 +14,7 @@
       <p>An iteration on the <a href="/history/ucas-course-status">first UCAS course status design</a> and the <a href="/history/course-not-running">second UCAS course status design</a>. We have received Zendesk tickets where candidates took a course code from DfE Find and hit errors when they tried to apply. The investigation showed that this was caused by us publishing courses to DfE Find which were set to running on UCAS, but weren’t set to published on UCAS.</p>
 
       <p>The <a href="https://www.ucas.com/file/115581/download?token=mv-G6P53">UCAS Teacher Training Set-up Guide</a> says:</p>
-      <div class="panel panel-wide-border">
+      <div class="govuk-inset-text">
         <blockquote>
           <p>Once you have confirmation that a training programme has been allocated places, please check you have your training programmes set to both <strong class="bold-small">Running</strong> and <strong class="bold-small">Yes</strong> in <strong class="bold-small">Publish</strong>, so applicants can apply.</p>
         </blockquote>
@@ -58,7 +58,7 @@
       <h2 class="govuk-heading-l">Training location status</h2>
       <p>When a training location is set to running but publish is set to ‘No’ it should have the following status:</p>
 
-      <div class="panel panel-wide-border">
+      <div class="govuk-inset-text">
         <p>
           Needs attention on UCAS: This location is set to ‘running’ but candidates can’t apply to it. To allow candidates to view and apply to this location, you must set its publish value to ‘Yes’ in UCAS web-link.
         </p>
