--- a/app/views/new/title.html
+++ b/app/views/new/title.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <p>From your answers we’ve created this title for your course:</p>
-      <div class="panel panel-border-wide add-double-bottom-margin">
+      <div class="govuk-inset-text add-double-bottom-margin">
         <p class="govuk-body-l">
           {{ generatedTitle }}
         </p>
