Clean up spacing in design history

--- a/app/views/history/salary-and-fees/index.html
+++ b/app/views/history/salary-and-fees/index.html
@@ -23,7 +23,7 @@
       <h2 class="govuk-heading-m">Salary amount</h2>
       <p><a href="/history/school-direct-view#salary">We used to ask for the salary amount</a> but for much of the year the actual salary figure isn’t available. It’s based on the national teacher’s pay scale that is published later in the year. Schools also apply this scale differently, eg prorata based on time in schools vs full time. Rules around this are unclear, the salary field could be used to explain this.</p>
 
-      <a href="https://dfedigital.atlassian.net/browse/BATSA-464">BATSA-464</a>
+      <p><a href="https://dfedigital.atlassian.net/browse/BATSA-464">BATSA-464</a></p>
     </div>
   </div>
 
