--- a/app/views/history/templates/index.html
+++ b/app/views/history/templates/index.html
@@ -11,7 +11,7 @@
     <div class="govuk-grid-column-two-thirds">
       <p>A first pass at providing users with a template function.</p>
 
-      <a href="https://dfedigital.atlassian.net/browse/BATSA-402">BATSA-402</a>
+      <p><a href="https://dfedigital.atlassian.net/browse/BATSA-402">BATSA-402</a></p>
 
       <h2 class="govuk-heading-l">Why use templates?</h2>
       <p>For many training providers there is great similarity between the courses they offer for different subjects. Users need an easy way to share information between these courses so they don't have to copy and paste content between them. Users also need to easily update all courses that share information, so that they all remain consistent, again without needing to copy and paste.</p>
