--- a/app/views/history/terms-agreement/index.html
+++ b/app/views/history/terms-agreement/index.html
@@ -21,7 +21,7 @@
         <a href="/accept-terms">View design in prototype</a>
       </p>
 
-      <a href="https://trello.com/c/fnReQwNM/121-dont-allow-publishing-until-a-publisher-has-accepted-terms-and-conditions">Story map</a>, <a href="https://trello.com/c/QVVSINV5/135-design-terms-and-conditions-acceptance-flow-when-a-user-signs-in-to-publish-courses">Trello ticket</a>
+      <p><a href="https://trello.com/c/fnReQwNM/121-dont-allow-publishing-until-a-publisher-has-accepted-terms-and-conditions">Story map</a>, <a href="https://trello.com/c/QVVSINV5/135-design-terms-and-conditions-acceptance-flow-when-a-user-signs-in-to-publish-courses">Trello ticket</a></p>
     </div>
   </div>
 
