--- a/app/views/history/what-is-a-course.html
+++ b/app/views/history/what-is-a-course.html
@@ -5,15 +5,16 @@
 
 {% block content %}
   <h1 class="govuk-heading-xl">{{ title }}</h1>
-  <p>
-    <a href="https://docs.google.com/presentation/d/1QgjOu_xpzZGDP_ylMIKzDL8CgW1TvtVKICb0P8YiTWQ/edit?usp=sharing">Slide deck</a><br />
-    <a href="https://dfedigital.atlassian.net/browse/BATSA-287">BATSA-287</a><br />
-    <a href="https://docs.google.com/document/d/1mhfEWuCosHZYPAsJkrYnFUHfule8mLrA9yMpTXg4Gco/edit?usp=sharing">Initial UCAS analysis</a><br />
-    <a href="https://docs.google.com/document/d/1AoXjU4hh56ql_YgS1NonMvT60laBtNx_vW7TiIo14vE/edit?usp=sharing">Hypotheses by Ray Khan</a>
-  </p>
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <ul class="govuk-list">
+        <li><a href="https://docs.google.com/presentation/d/1QgjOu_xpzZGDP_ylMIKzDL8CgW1TvtVKICb0P8YiTWQ/edit?usp=sharing">Slide deck</a></li>
+        <li><a href="https://dfedigital.atlassian.net/browse/BATSA-287">BATSA-287</a></li>
+        <li><a href="https://docs.google.com/document/d/1mhfEWuCosHZYPAsJkrYnFUHfule8mLrA9yMpTXg4Gco/edit?usp=sharing">Initial UCAS analysis</a></li>
+        <li><a href="https://docs.google.com/document/d/1AoXjU4hh56ql_YgS1NonMvT60laBtNx_vW7TiIo14vE/edit?usp=sharing">Hypotheses by Ray Khan</a></li>
+      </ul>
+
       <h2 class="govuk-heading-l">Why are we questioning this?</h2>
       <p>We asked providers for their business studies courses using a spreadsheet.</p>
       <p>What we got back from	 providers was inconsistent. Providers had different ideas about what a course was.</p>
@@ -100,7 +101,7 @@
       <p>The course page becomes a space for providers to explain to candidates the differences between those options.</p>
       <p>When applying for a course the options decision becomes explicit and candidates can make an informed choice.</p>
 
-      <a href="https://search-and-compare-beta.herokuapp.com/history/variants">Example search results</a>
+      <p><a href="https://search-and-compare-beta.herokuapp.com/history/variants">Example search results</a></p>
 
       <h2 class="govuk-heading-l">What this means</h2>
 
