--- a/app/views/history/who-did-what-when/index.html
+++ b/app/views/history/who-did-what-when/index.html
@@ -17,7 +17,7 @@
 
       <p><a href="/history/publish-changes/iteration-aug-15">All states in prototype</a></p>
 
-      <a href="https://trello.com/c/MdtRyOft/129-surface-information-about-who-and-when-the-last-draft-about-your-org-was-saved">Trello</a>
+      <p><a href="https://trello.com/c/MdtRyOft/129-surface-information-about-who-and-when-the-last-draft-about-your-org-was-saved">Trello</a></p>
     </div>
   </div>
 
