--- a/app/views/history/multiple-organisations/index.html
+++ b/app/views/history/multiple-organisations/index.html
@@ -36,7 +36,7 @@
 
       <p>Access requests need a design update for multiple organisations. As a user with access to multiple organisations I need to request access for other people so that they can either have the same access as me, or have access to a specific organisation.</p>
 
-      <a href="https://dfedigital.atlassian.net/browse/BATSA-451">BATSA-451</a>
+      <p><a href="https://dfedigital.atlassian.net/browse/BATSA-451">BATSA-451</a></p>
 
       <h2 class="govuk-heading-m">Organisations without courses</h2>
       <p>Some organisations will have no courses because:</p>
@@ -46,7 +46,7 @@
       </ul>
       <p>This needs design work.</p>
 
-      <a href="https://dfedigital.atlassian.net/browse/BATSA-476">BATSA-476</a>
+      <p><a href="https://dfedigital.atlassian.net/browse/BATSA-476">BATSA-476</a></p>
 
       <h2 class="govuk-heading-m">Updated header</h2>
 
