Link to more new course research

--- a/app/views/history/new-course-2/index.html
+++ b/app/views/history/new-course-2/index.html
@@ -22,11 +22,19 @@
 
       <h2 class="govuk-heading-l" id="user-research">User research</h2>
 
-      <p>We tested the shortest path with 2 providers. This excluded language, training location, fee and salary and accredited provider screens.</p>
+      <p>
+        <a href="https://dfedigital.atlassian.net/wiki/spaces/BaT/pages/762609665/Analysis+and+write+up">Analysis and write-up on Confluence</a> and <a href="https://docs.google.com/presentation/d/1ImIHrXYtxKQwYa4LBOQQMHrl-WCq3Ke3UQmBcYDZiO4/">Research presentation</a>
+      </p>
+
+      <p>We tested with 6 providers. Some journeys excluded language, training location, fee and salary and accredited provider screens because they weren’t appropriate.</p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="https://lookback.io/watch/veykZkMozQtCAvceD">Keele and North Staffordshire Education</a> (<a href="https://lookback.io/watch/gKCGDj8zDhCiqwQ77">alternative version</a>)</li>
         <li><a href="https://lookback.io/watch/gYu2aoCo3PWyaJEHH">University of Wolverhampton</a></li>
+        <li><a href="https://lookback.io/watch/QjevW5d7ahX57csvf">Sheffield Teaching School Alliance</a></li>
+        <li><a href="https://lookback.io/watch/RrMJ6CkbkXkrQ49Hk">Canterbury Christ Church University</a></li>
+        <li><a href="https://lookback.io/watch/GJbiS5bz4ouL6uohF">Educate Teacher Training</a></li>
+        <li><a href="https://lookback.io/watch/8X5QYCPob8XmSAtbw">University of East London</a></li>
       </ul>
 
       <p>Providers found adding a new course easy to do:</p>
