Prevent participants going into wrong parts of prototype

--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -35,7 +35,7 @@
         {% else %}
           <span class="govuk-tag phase-tag-small phase-tag-no-content">Empty</span>
         {% endif %}
-        <a href="/about-your-organisation" class="govuk-!-margin-left-2">Fill-in your organisation information</a>
+        <a href="#" class="govuk-!-margin-left-2">Fill-in your organisation information</a>
       </p>
     </div>
   </div>
