Fix courses quiz for research

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -68,8 +68,8 @@
       meta: {
         items: [
           {
-            href: "https://govuk-prototype-kit.herokuapp.com/",
-            text: "GOV.UK Prototype Kit " + releaseVersion
+            href: "/quiz",
+            text: "Quiz"
           },
           {
             href: "/prototype-admin/clear-data",
