Add links to vacancies user research

--- a/app/views/history/publish-states.html
+++ b/app/views/history/publish-states.html
@@ -11,6 +11,13 @@
       <p>Publishing before transition was complicated. Each training location had a state and a publish flag, which determines if the course appears in Find and can be applied to on UCAS Apply. Then the content has its own state – Empty, Draft or Published.</p>
 
       <p>You could write and publish content for new courses on Publish, they’d be labelled green, but they would not appear online if the user hadn’t set their training locations to running in UCAS (or if UCAS hadn’t approved this by <a href="/history/course-not-running-oct-15">setting the publish flag to yes</a>).</p>
+
+      <h2 class="govuk-heading-l">User research</h2>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="https://lookback.io/watch/ud8KczRqKKAexox28">Suffolk and Norfolk Primary SCITT</a></li>
+        <li><a href="https://lookback.io/watch/E8MxZYHrmy7E7q85w">The Downland Alliance</a></li>
+      </ul>
     </div>
   </div>
 
