--- a/app/views/history/vacancies/index.html
+++ b/app/views/history/vacancies/index.html
@@ -21,6 +21,13 @@
       </ul>
 
       <p>Vacancies could sit within a course, alongside the enrichment fields, or separate to it. If vacancies were alongside enrichment then either; vacancies would need to be published after editing; or vacancies would behave differently to the other form. For this reason vacancies has been put elsewhere, and the design tries to make it clear that these changes will be immediate.</p>
+
+      <h2 class="govuk-heading-l">User research</h2>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="https://lookback.io/watch/ud8KczRqKKAexox28">Suffolk and Norfolk Primary SCITT</a></li>
+        <li><a href="https://lookback.io/watch/E8MxZYHrmy7E7q85w">The Downland Alliance</a></li>
+      </ul>
     </div>
   </div>
 
