--- a/app/views/history/index.html
+++ b/app/views/history/index.html
@@ -8,6 +8,15 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <h2 class="govuk-heading-m">January 2019</h2>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
+        <a href="/history/migrating-publish-statuses">Migrating publish statuses</a>
+      </h3>
+      <p>
+        How old UCAS status and enrichment status should map to a single new status.
+      </p>
+
       <h2 class="govuk-heading-m">December 2018</h2>
 
       <h3 class="govuk-heading-s govuk-!-margin-bottom-0">
