--- a/app/views/history/migrating-publish-statuses.html
+++ b/app/views/history/migrating-publish-statuses.html
@@ -6,6 +6,12 @@
 {% block content %}
   <h1 class="govuk-heading-xl">{{ title }}</h1>
 
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <p>How we get from the two statuses we have now (UCAS course running status, and Publish course content status), to a <a href="/history/publish-states">simpler single course status</a>.</p>
+    </div>
+  </div>
+
   <style>
     .new-status {
       background: #eee;
@@ -18,7 +24,7 @@
     }
   </style>
 
-  <table class="govuk-table">
+  <table class="govuk-table govuk-!-margin-top-4">
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
         <th class="govuk-table__header" style="width: 22%">Old<br />UCAS status</th>
