Add rolled over status to course quiz

--- a/app/views/quiz.html
+++ b/app/views/quiz.html
@@ -94,6 +94,22 @@
       </tr>
       <tr class="govuk-table__row">
         <td class="govuk-table__cell">
+          <a href="/course/E65/28ZC" class="govuk-heading-s govuk-!-margin-bottom-0">Religious education (R123)</a>
+          <span class="govuk-body-s">QTS full time</span>
+        </td>
+        <td class="govuk-table__cell">
+          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-no-content">Rolled over</span>
+        </td>
+        <td class="govuk-table__cell">
+          No – still in draft
+        </td>
+        <td class="govuk-table__cell">
+        </td>
+        <td class="govuk-table__cell">
+        </td>
+      </tr>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">
           <a href="/course/E65/28ZC" class="govuk-heading-s govuk-!-margin-bottom-0">History (DD23)</a>
           <span class="govuk-body-s">QTS full time</span>
         </td>
@@ -145,21 +161,6 @@
           No
         </td>
       </tr>
-      <!-- <tr class="govuk-table__row">
-        <td class="govuk-table__cell">
-          <a href="/course/E65/28ZC" class="govuk-heading-s govuk-!-margin-bottom-0">Rolled over course (R123)</a>
-          <span class="govuk-body-s">QTS full time</span>
-        </td>
-        <td class="govuk-table__cell">
-          <span class="govuk-tag phase-tag-small phase-tag-table phase-tag-no-content">Rollover</span>
-        </td>
-        <td class="govuk-table__cell">
-        </td>
-        <td class="govuk-table__cell">
-        </td>
-        <td class="govuk-table__cell">
-        </td>
-      </tr> -->
     </tbody>
   </table>
 
